namespace WeaponConstantsNS.ShootingWeaponConstantsNS
{
	public static class ShootingWeaponConstants
	{
		public const string RELOADING = "Reloading";
		public const string FIRING = "Firing";
		public const string ALT_FIRING = "AltFiring";
		public const string OUT_OF_AMMO = "OutOfAmmo";
		public const string DIFFERENCE = "Difference";
		public const string IDLE = "Idle";
	}
}