
namespace MyConstants
{
    public class Constants
    {

    }
    public static class CommonConstants
    {
        public const string PLAYER = "Player";
        public const string MAPS = "Maps";
        public const string TEXTSHOWER = "InfoText";
        public const string MAIN_AUDIO_MANAGER = "MainAudioManager";
        public const string BLACK_SCREEN_DIMMING = "BlackScreenDimming";
    }
    public class ShootingWeaponConstants
    {
        public const string RELOADING = "Reloading";
        public const string FIRING = "Firing";
        public const string OUT_OF_AMMO = "OutOfAmmo";
        public const string IDLE = "Idle";
    }
    public class EnemyConstants
    {
        public const string IsWalking = "IsWalking";
        public const string Jump = "Jump";
        public const string Landed = "Landed";
        public const string ATTACK_TRIGGER = "Attack";
        public const string DEATH_TRIGGER = "Death";
    }


}

